--- a/style.css
+++ b/style.css
@@ -1,9 +1,19 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
 }
 
-canvas {
-    background-color: rgb(49, 49, 49);
+@media (max-width: 999px) {
+    canvas {
+        max-width: 100%;
+        max-height: 100vh;
+        padding-top: 0;
+    }
+}
+
+@media (max-width: 400px) {
+    canvas {
+        max-width: 100%;
+        max-height: 100vh;
+    }
 }
