--- a/style.css
+++ b/style.css
@@ -3,6 +3,15 @@
     padding: 0;
 }
 
+.dot {
+    background-color: red;
+    width: 1rem;
+    height: 1rem;
+    border-radius: 50%;
+    position: absolute;
+    transform: translate(-50%, -50%);
+}
+
 
 @media (max-width: 999px) {
     canvas {
